<resources>
    <string-array name="horarios">
        <item>Segunda-feira - 11h às 13h</item>
        <item>Terça-feira - 11h às 13h</item>
        <item>Quarta-feira - 11h às 13h</item>
        <item>Quinta-feira - 11h às 13h</item>
    </string-array>

    <string name="app_name">Cardápio Digital</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="campus">Campus Manaus Zona Leste</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="matricula">Matricula</string>
    <string name="email_institucional">E-mail Institucional</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="crie_nsua_conta">Crie\nsua Conta!</string>
    <string name="descricao_image">descricao_image</string>
    <string name="telefone">Telefone</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="notifica_es">Notificações</string>
    <string name="emocard">emocard</string>
    <string name="sair">sair</string>
    <string name="zxing_msg_camera_framework_bug">Desculpe, a camera do android encontrou um problema. Você necessita reiniciar o dispositivo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>