<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:backgroundTint="@color/gray"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@android:color/transparent"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/fieldsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_criar_conta"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/crie_nsua_conta"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/fieldsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/GreenTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMatricula"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number"
                android:hint="@string/matricula"
                android:padding="12dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/GreenTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/nome_completo"
                android:padding="12dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/GreenTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_institucional"
                android:padding="12dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/GreenTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSenha"

                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/GreenTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmarSenha"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/primary"
                android:textColorHint="@color/primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#1C5A52"
            android:padding="15dp"
            android:text="@string/cadastrar_se"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
